BE R: refactor dto & change/ reset password